# git-actions

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: pr_check.yml
docs/: architecture.md  specification.md
docs/schema/: README.md  rules.yaml  schema.md  server.yaml  webhook.yaml
rules/: project-a-config.yaml  project-b-config.yaml
src/: error.rs  lib.rs  main.rs
src/app/: error.rs  logging.rs  mod.rs  router.rs  server.rs  template.rs
src/app/config/: mod.rs  rules.rs  server.rs  types.rs  webhook.rs
src/app/handlers/: health.rs  metrics.rs  mod.rs
src/app/webhooks/: bitbucket.rs  handler.rs  mod.rs  rule_evaluator.rs  types.rs
src/config/: common.rs  loader.rs  mod.rs  rules_config.rs  server_config.rs  validator.rs  webhook_config.rs
src/logging/: _temp.txt  error.rs  mod.rs
src/server/: error.rs  mod.rs  router.rs  server.rs
src/server/handlers/: bitbucket.rs  health.rs  metrics.rs  mod.rs  webhook.rs
tests/: bitbucket.rs  template_rendering.rs
