[package]
name = "git-actions"
version = "0.2.1"
edition = "2021"
description = "An automation tool for Git events"

[lib]
name = "git_actions"
path = "src/lib.rs"

[[bin]]
name = "git-actions"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.8.3", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
clap = { version = "4.2", features = ["derive"] }
glob = "0.3"

# HTTP client
reqwest = { version = "0.12.15", features = ["json"] }

# Other utilities
async-trait = "0.1"
bitbucket-server-rs = "0.5.1"
wildmatch = "2.4.0"
regex = "1.11.1"
strum_macros = "0.27.1"
tera = "1.19.1"

[dev-dependencies]
tempfile = "3.19.1"
wiremock = "0.6"
